Fix squishy image

--- a/src/Components/HomePage/HomePage.scss
+++ b/src/Components/HomePage/HomePage.scss
@@ -134,7 +134,7 @@
     }
 
     .WavyScreenshot {
-      width: 100%;
+      max-width: 100%;
       max-height: 300px;
       padding: 10px;
       box-sizing: border-box;
